--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #999999;
+  background-color: blueviolet;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -60,9 +60,9 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
+  max-width: 1440px;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 0.25rem;
 }
 
 @media (prefers-color-scheme: light) {
