--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: blueviolet;
+  color: black;
+  background-color: #f6f6f6;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -26,14 +26,68 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  place-items: center;
+  place-items: left;
   min-width: 320px;
   min-height: 100vh;
 }
 
+.top-matter{
+  text-align: left;
+  padding-left: 1em;
+}
+.app-wrapper{
+  display: grid;
+  height: 75vh;
+  grid-template-columns: 8fr 2fr;
+  align-items: top
+}
 h1 {
   font-size: 3.2em;
+  font-weight: normal;
   line-height: 1.1;
+}
+.opening-blurb{
+  font-size: 1.25em;
+}
+.tab-controls{
+  line-height:3.2rem;
+  display:flex;
+  justify-content: space-evenly;
+  padding:0.5em;
+  height:7vh;
+}
+.control-icon{
+  height:6vh;
+  width:6vh;
+  line-height:6vh;
+  text-align:center;
+  border:3pt solid white;
+  border-radius: 50%;
+}
+.control-icon:hover{
+  border:3pt solid #9e8bc6;
+}
+.tab-content{
+  width:20vw;
+  height:66vh;
+  border:1px solid black;
+  overflow:scroll
+}
+.cy-wrapper{
+   height:75vh;
+   width:75vw;
+}
+.cy-wrapper, .tab-content{
+   border:5px solid white;
+}
+.tab-content h5{
+  background-color: #e8e4ef;
+  border-radius: 1em;
+  text-align:center;
+}
+.sidebar{
+  height:75vh;
+  max-height:75vh
 }
 
 button {
@@ -60,9 +114,8 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1440px;
   margin: 0 auto;
-  padding: 0.25rem;
+  padding: 1rem;
 }
 
 @media (prefers-color-scheme: light) {
